# Hammer5Tools

./: .gitignore  Hammer5Tools.pyproject  Hammer5Tools.pyproject.user.85e345b  Hammer5Tools.spec  Hammer5Tools_Updater.spec  LICENSE  README.md  RELEASE_NOTES.md  basic_operations.py  build.bat  build.py  common.py  compile.bat  compile_resources.bat  compile_ui.py  form.ui  hammer5tools_setup.ifp  hammer5tools_setup_pc.ifp  installer.iss  main.py  main.ui  makefile.py  nuitka-crash-report.xml  output.vsndevts  preferences.py  preferences.ui  pyi_runtime_hook_pythonnet.py  pyoxidizer.bzl  rc_resources.py  requirements.txt  resources.qrc  resources_rc.py  sounds.h5t_batch  test.vsmart  test_dep.py  test_dep2.py  test_regex.py  test_winreg.py  test_winreg2.py  ui_form.py  (+5 more)
.github/: RELEASE_NOTES_v5.0.0.md
.run/: Build All.run.xml  Build App.run.xml  Build Final.run.xml  Build Updater.run.xml  Build.run.xml  Start dev.run.xml  Start.run.xml  compile_ui.run.xml  main dev.run.xml  main.run.xml  makefile.run.xml  updater dev.run.xml  updater.run.xml
BatchCreator/: BatchCreator_custom_highlighter.py  BatchCreator_file_parser.py  BatchCreator_main.py  BatchCreator_main.ui  BatchCreator_mini_windows_explorer.py  BatchCreator_process.py  BatchCreator_process_dialog.py  BatchCreator_process_dialog.ui  form.ui  ui_BatchCreator_main.py  ui_BatchCreator_process_dialog.py
VConsoleLib/: __init__.py  binary.py  packet_adon.py  packet_ainf.py  packet_cfgv.py  packet_chan.py  packet_cvar.py  packet_prnt.py  vconsole2_lib.py
completer/: main.py  test.py
create_addon/: create_addon_mian.py  ui_create_addon_dialog.py
design/: icons.psd
dev/: build.py  compile_ui.py  rcon_protocol.py  test_blueprint_vsmart.py  test_cleanup_feature.py  test_gitvmapmerge.py  test_material_vmat.py  test_smartprop_engine.py  test_ue_transform.py  test_vmap_converter.py  test_vmdl_materialgroup.py  vconselib_test.py
docs/: Adding_SmartProp_Properties.md
documentation/: documentation.py  documentation_dialog.ui  ui_documentation_dialog.py
explorer/: image_viewer.py  main.py
export_and_import_addon/: export_and_import_addon.py  ui_export_and_import_addon.py
find_and_replace/: main.py  main.ui  ui_main.py
hotkey_editor/: CS2HammerHotkeyEditor.ps1  dialog.py  format.py  hammer_key_bindings.txt  hotkey_format.py  main.py  main.ui  objects.py  test.ps1  ui_dialog.py  ui_main.py
keyvalues3/: __init__.py  keyvalues3.py  textwriter.py
launcher/: CMakeLists.txt  Hammer5ToolsLauncher.csproj  Program.cs  main.cpp  resources.rc  update_manager.cpp  update_manager.h
loading_editor/: loading_editor_image_drag_and_drop_area.py  loading_editor_image_frame_widget.ui  loading_editor_main.py  loading_editor_mainwindow.ui  loading_editor_mainwindow_ui.py  svg_drag_and_drop.py  ui_loading_editor_image_frame_widget.py  ui_loading_editor_mainwindow.py
minor_features/: NCM_mode_setup_main.py  addon_functions.py  assettypes.py  assettypes_cs2_process.py  (+3 more)
updater/: CMakeLists.txt  Hammer5ToolsUpdater.csproj  Program.cs  UpdaterForm.cs  main.cpp  resources.rc  update_logic.cpp  update_logic.h
(+1040 files in other folders)
